# relaxng_validator_wasm

./: .gitignore  .gitmodules  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: on_pull_request.yml
python-api/: Cargo.toml  README.md
python-api/src/: lib.rs
python-api/tests/: test_validator.py
src/: demo.rs  error_filter.rs  expected_attrs.rs  lib.rs  lib.test.rs  main.rs  validation.rs  validation_types.rs  vfs.rs  vfs.test.rs  xmlparser_serde.rs
tests/: run_validator_cases.sh  test-bad.xml  test-good.xml
validator-playground/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
validator-playground/public/assets/: pretext-dev.rnc  pretext.rnc  pretext.rng  test-good.xml
validator-playground/src/: App.css  App.tsx  XmlEditor.tsx  index.css  validator.worker.ts  validatorWorkerApi.ts
wasm-api/: Cargo.toml  README.md
wasm-api/src/: lib.rs
wasm-api/tests/: validator.test.ts
