[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "relaxng-validator"
version = "0.1.0"
description = "RELAX NG validator with virtual file system support"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.maturin]
manifest-path = "python-api/Cargo.toml"
module-name = "relaxng_validator"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["python-api/tests"]
