[package]
name = "relaxng-validator-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "relaxng_validator"
crate-type = ["cdylib"]

[dependencies]
relaxng-validator-core = { package = "relaxng-validator-wasm", path = ".." }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde-json-wasm = "1"
