[package]
name = "relaxng-validator-wasm-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
relaxng-validator-core = { package = "relaxng-validator-wasm", path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-json-wasm = "1"
tsify = { version = "0.5", default-features = false, features = ["js"] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
